--- a/SpringBoot/src/main/resources/templates/adminView/logFile.html
+++ b/SpringBoot/src/main/resources/templates/adminView/logFile.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+<!--    <meta http-equiv="refresh" content="3">-->
     <title>로그 파일 상세내용</title>
     <style>
         body {
